Change History
==============

1.7.4 Unreleased
----------------

- Clean up encryption error handling.
  [smcmahon]

1.7.3 2012-10-23
----------------

- Get encryption working with Python 2.6.
  [smcmahon]

- Do not explicitly set the MIME-Version as this would lead to a
  duplicate header, which can give problems with some mail servers.
  [maurits]


1.7.2 2012-08-16
----------------

- Make the dragging hook in the quickeditor order column show
  a move cursor.
  [smcmahon]

- quickedit.js had a case where "$" was used as an unguarded
  alias for jQuery. This interacted with a kss.core bug to kill
  all quickedit js functionality on IE 8. Fixed.
  [smcmahon]

- Fix selectors to work with latest jquery
  [vangheem]


1.7.1 2012-02-13
----------------

- Fix override disabling of fields with vocabularies.

- Fix issue #20: "email validation text is wrong," which would also
  affect several other error strings. Thanks, sunew!

- Fix issue #22: "RichLabel Widget displays '1' instead of label text
  after submitting form whith not all required fields provided."
  Thanks, ksuess!

- Partially Fixed issue #18 (new, github tracker): "BadRequest after
  adding a new thanks page if link integrity checking is enabled" by
  removing link from default nosubmit message. A fix that will allow
  importing, cutting and pasting of old versions will need work. Thanks,
  datakurre!

1.7.0 2011-11-16
----------------

- Add archetypes viewlet manger in forms before & after fieldsets
  [jfroche]

1.7rc1 2011-11-08
-----------------

- Add accordion for widgets in quick edit mode.
  [smcmahon]

1.7b7 unreleased
----------------

- Some validation messages were partially untranslatable. Github issue
  "Validation error of isEmail validator is not translated," thanks markvl.
  [smcmahon]

- Eradicate rounded corners in quick edit toolbox.
  General quick editor style cleanup.
  [smcmahon]

- Updated Catalan (ca) and Spanish (es) translation
  [arielvb]
