@@ -1,7 +1,7 @@
 <configure
     xmlns:zope="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser">
-  
+
   <browser:page
       for="..interfaces.IPloneFormGenForm"
       name="export-form-folder"
@@ -9,7 +9,7 @@
       permission="cmf.ManagePortal"
       allowed_interface="..interfaces.IFormFolderExportView"
       />
-  
+
   <browser:page
       for="..interfaces.IPloneFormGenForm"
       name="import-form-folder"
@@ -17,7 +17,7 @@
       allowed_interface="..interfaces.IFormFolderImportView"
       permission="cmf.ManagePortal"
       />
-  
+
   <browser:page
       name="embedded"
       for="Products.PloneFormGen.interfaces.IPloneFormGenForm"
@@ -53,5 +53,13 @@
     template="quickedit.pt"
     permission="cmf.ModifyPortalContent"
     />
-    
+
+  <browser:page
+      for="*"
+      name="gpg_services"
+      class=".gpg_encrypt.GnuPGView"
+      permission="zope.Public"
+      allowed_attributes="encrypt"
+      />
+
 </configure>
